[tool.poetry]
name = "howru"
version = "0.1.0"
description = "The Slackbot that cares"
authors = ["Jens Tinglev <tinglev@kth.se>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23"
coloredlogs = "^14.0"
schedule = "^0.6.0"
slackclient = "^2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
